<resources>
    <string name="app_name">SimpleTracker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Simple Tracker</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_slideshow">Correlation Report</string>

    <!-- Preference Titles -->
    <string name="sync_header">Sync</string>
    <string name="notification_header">Notifications</string>
    <string name="notification_enable">Enable Notifications</string>
    <string name="menu_display">Settings</string>

    <!-- Preferences -->
    <string name="app_theme">App Theme</string>
    <string name="font_title">App Font</string>
    <string name="help_switch_header">Show Help page when app opens</string>
    <string name="menu_display_summary">Relaunch app to apply display changes</string>

    <!-- Sync Preferences -->
    <string name="sync_sign_in_button">Android Sync Settings</string>
    <string name="sync_sign_in_summary">Takes you to the System settings</string>
    <string name="sync_frequency">Automatically Sync</string>
    <string name="sync_now_button">Manually Sync Now</string>
    <string name="sync_using_data">Only Sync over Wifi</string>
    <string name="display_header">Display Settings</string>
    <string name="help_display">Help</string>
    <string name="clear_memory_button">Clear Local Data</string>
    <string name="clear_memory_button_summary">Delete all Data on device</string>
    <string name="new_tag">New Tag</string>
    <string name="not_empty">Tag Name cannot be left blank</string>
    <string name="not_duplicate">Tag Name already exists, changes canceled</string>
    <string name="tag_name">Tag Name Here</string>
    <string name="add_tag_button">Add Tag Button</string>
    <string name="tag_note">Add any notes here</string>

    <string name="help_text">
        Welcome to Simple Tracker!\n\n

        This app allows you to define data Tags for different things in your life. Then as those things happen, you can trigger the tag so that it records a data point. As you collect this data you can see what tags correlate to each other and some other statistics.
        \n\nFor example, you could define a data tag for Headaches, a tag for sleep quality, and a tag for hydration. Then each day you record how well you slept, how well you stayed hydrated, and if you had a headache. After gathering data for a while you could see if hydration or sleep seem more correlated to headaches.\n\n

        This app uses android\'s built in auto-backup, so if your android phone has backup enabled your data will be kept in your google drive but will not count towards your storage cap.\n\n

        This project is open source, so if you have a feature you want to add, feel free to request it or create it yourself.\n\n

        The daily reminder alarms are inexact, so on newer android versions they should go off within 10 min depending on doze settings, and on older android versions they should go off within an hour of set time.\n\n

        Always remember that correlation is not causation, so finding a strong correlation doesn\'t mean that one thing causes the other. Also remember that your conclusions are only as useful as the data you collect.\n\n

        Feel free to contact me at ada18031@byui.edu with questions or comments

    </string>
    <string name="notification_picker_button">Notification Time</string>
    <string name="notification_summary">Re-Enabling notifications does not set individual reminders</string>
    <string name="reminderStuff">Save tag to be able to set a reminder or add data</string>
    <string name="channel_name">Daily Reminders</string>
    <string name="channel_description">Reminder notifications for Simple Tracker</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>