<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.simpletracker.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_help"
            app:destination="@id/nav_help" />
    </fragment>

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.simpletracker.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.simpletracker.Settings"
        android:label="@string/menu_display"
        tools:layout="@xml/root_preferences" />


    <fragment
        android:id="@+id/nav_help"
        android:name="com.example.simpletracker.ui.HelpFragment"
        android:label="@string/help_display"
        tools:layout="@layout/fragment_help">
        <action
            android:id="@+id/action_nav_help_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

</navigation>